--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "@viem/anvil": "0.0.10",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "@wevm/alto": "^0.0.1-0",
     "c-kzg": "^2.1.2",
     "ethers": "^6.0.2",
+    "execa": "^9.1.0",
     "fs-extra": "^10.1.0",
     "globby": "^13.2.2",
     "rimraf": "^4.4.1",
